--- a/index.html
+++ b/index.html
@@ -5,5 +5,10 @@
     <meta charset="utf-8">
   </head>
   <body>
+  	<h1>Exercicio da disciplina de gerencia e configuração de mudanças</h1>
+  	<footer>
+  		<p>feito por jussara</p>
+  		Copyright ® 
+  	</footer>
   </body>
 </html>
